--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -72,7 +72,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>D:\Programming-Libs\cpp\glfw-3.3.8\include;D:\Programming-Libs\cpp\glad_opengl3.3_core\include;D:\Programming-Libs\cpp\glm-0.9.9.8;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Programming-Libs\cpp\stb-master;D:\Programming-Libs\cpp\glfw-3.3.8\include;D:\Programming-Libs\cpp\glad_opengl3.3_core\include;D:\Programming-Libs\cpp\glm-0.9.9.8;$(IncludePath)</IncludePath>
     <ReferencePath>D:\Programming-Libs\cpp\glfw-3.3.8\build\src\Debug;$(ReferencePath)</ReferencePath>
     <LibraryPath>D:\Programming-Libs\cpp\glfw-3.3.8\build\src\Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
@@ -145,6 +145,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="idk.png" />
+    <Image Include="idk1.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
