--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -72,9 +72,9 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>D:\Programming-Libs\cpp\stb-master;D:\Programming-Libs\cpp\glfw-3.3.8\include;D:\Programming-Libs\cpp\glad_opengl3.3_core\include;D:\Programming-Libs\cpp\glm-0.9.9.8;$(IncludePath)</IncludePath>
-    <ReferencePath>D:\Programming-Libs\cpp\glfw-3.3.8\build\src\Debug;$(ReferencePath)</ReferencePath>
-    <LibraryPath>D:\Programming-Libs\cpp\glfw-3.3.8\build\src\Debug;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\Programming-Libs\cpp\OpenAL1.1\include;D:\Programming-Libs\cpp\stb-master;D:\Programming-Libs\cpp\glfw-3.3.8\include;D:\Programming-Libs\cpp\glad_opengl3.3_core\include;D:\Programming-Libs\cpp\glm-0.9.9.8;$(IncludePath)</IncludePath>
+    <ReferencePath>D:\Programming-Libs\cpp\glfw-3.3.8\build\src\Debug;D:\Programming-Libs\cpp\OpenAL1.1\libs\Win64;$(ReferencePath)</ReferencePath>
+    <LibraryPath>D:\Programming-Libs\cpp\glfw-3.3.8\build\src\Debug;D:\Programming-Libs\cpp\OpenAL1.1\libs\Win64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>D:\Programming-Libs\cpp\glfw-3.3.8\include;D:\Programming-Libs\cpp\glad_opengl3.3_core\include;$(IncludePath)</IncludePath>
@@ -119,7 +119,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>opengl32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
