--- a/LearnOpenGL/LearnOpenGL.vcxproj.filters
+++ b/LearnOpenGL/LearnOpenGL.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="animation.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="gameplay.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="audio.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md" />
@@ -56,6 +62,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="animation.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="audio.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="gameplay.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
